--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.0",
     "firebase": "^9.6.8",
+    "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
+    "react-youtube": "^7.14.0",
+    "swiper": "^8.0.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
